Tinker with chart and fix navbar on Safari

--- a/client/web/src/app/layouts/main-layout/account-layout/account-layout.component.scss
+++ b/client/web/src/app/layouts/main-layout/account-layout/account-layout.component.scss
@@ -10,6 +10,6 @@
   position: fixed;
   top: 64px;
   width: 100%;
-  z-index: 100;
+  z-index: 99;
   border-color: var(--border-color);
 }
