--- a/client/web/src/app/shared/components/stock/search-stock/search-stock.component.scss
+++ b/client/web/src/app/shared/components/stock/search-stock/search-stock.component.scss
@@ -1,5 +1,5 @@
 .search-wrapper {
-  z-index: 100;
+  z-index: 99;
 }
 
 .search-container {
